Changes to enable logging
Signed-off-by: Flavio Junqueira (fpj) <flavio.junqueira@emc.com>

--- a/build.gradle
+++ b/build.gradle
@@ -329,6 +329,8 @@ project('segmentstore:server') {
         compile project(':segmentstore:storage')
         compile project(':shared:metrics')
         testCompile project(':test:testcommon')
+        testCompile group: 'org.slf4j', name: 'log4j-over-slf4j', version: slf4jApiVersion
+        testCompile group: 'ch.qos.logback', name: 'logback-classic', version: qosLogbackVersion
     }
     javadoc {
         dependencies {
